fixed spacing bug

--- a/src/styles/components/Hero.module.css
+++ b/src/styles/components/Hero.module.css
@@ -1,5 +1,4 @@
 .main {
-  height: 100vh;
   display: flex;
   padding: 0 10vw;
 }
