--- a/src/styles/components/Schedule.module.css
+++ b/src/styles/components/Schedule.module.css
@@ -7,6 +7,7 @@
 	background-size: contain;
   background-position: top;
   box-sizing: border-box;
+  margin-top: 30vw;
   height: 40.5vw;
   width: 45vw;
   padding: 2.5vw 6.5vw;
